add admin page with blogs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -190,12 +190,22 @@ body {
 /* Quill Custom Styles with Tailwind */
 @layer base {
   h1 {
-    @apply text-4xl font-bold;
+    @apply text-4xl ;
   }
   h2 {
-    @apply text-3xl font-semibold;
+    @apply text-3xl ;
   }
   h3 {
-    @apply text-2xl font-semibold;
+    @apply text-2xl ;
   }
+  h4 {
+    @apply text-xl ;
+  }
+  h5 {
+    @apply text-lg ;
+  }
+  h6 {
+    @apply text-base ;
+  }
+
 }
